clientVerseGit/force-app/main/default/objects/View_Share_Config__c/View_Share_Config__c.object-meta.xml
<CustomObject>
    <label>View Share Config</label>
    <nameField>
        <label>View Share Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>View Share Configs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>