clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Add Members</fullName>
            </value>
            <value>
                <fullName>Remove Members</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Approved Reviewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>