clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Config_Id__c</fullName>
    <label>Config Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>