clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Edit_Access_Granted_To__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access_Granted_To__c</fullName>
    <label>Edit Access Granted To</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>