clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Filters_Data__c.field-meta.xml
<CustomField>
    <fullName>Filters_Data__c</fullName>
    <label>Filters Data</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>