clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Last_Access_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Access_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Access Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>View_Share_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>