clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Last_Access_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Access_Modified_Date__c</fullName>
    <label>Last Access Modified Date</label>
    <type>Date</type>
</CustomField>