clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List</label>
    <referenceTo>List__c</referenceTo>
    <relationshipLabel>List Shares</relationshipLabel>
    <relationshipName>ListShares</relationshipName>
    <type>Lookup</type>
</CustomField>