clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Revoked__c.field-meta.xml
<CustomField>
    <fullName>Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revoked</label>
    <type>Checkbox</type>
</CustomField>