clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>