clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Selected_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Record_Ids__c</fullName>
    <label>Selected Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>