clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Shared_With__c.field-meta.xml
<CustomField>
    <fullName>Shared_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ListShares</relationshipName>
    <type>Lookup</type>
</CustomField>