clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Sharing_Type__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Type__c</fullName>
    <label>Sharing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authenticated</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>