clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Tokenized_URL__c.field-meta.xml
<CustomField>
    <fullName>Tokenized_URL__c</fullName>
    <label>Tokenized URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>