clientVerseGit/force-app/main/default/objects/View_Share_Config__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List Builder</fullName>
            </value>
            <value>
                <fullName>Global Search</fullName>
            </value>
            <value>
                <fullName>List Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>